2014-11-23  Tobias Burnus  <burnus@net-b.de>

	* gfortran.dg/tab_continuation.f: Update dg-*.

2014-11-23  Andrew Pinski  <apinski@cavium.com>

	* gcc.c-torture/compile/20120927-1.c: New testcase.
	* gcc.c-torture/compile/20120830-1.c: New testcase.

2014-11-22  Andrew Pinski  <apinski@cavium.com>

	* g++.dg/cpp0x/initlist-lifetime1.C: Fix testcase where
	argc is always greater than 1 (octeon simulator).
	* g++.dg/cpp0x/initlist-lifetime2.C: Likewise.

2014-11-22  Andrew Pinski  <apinski@cavium.com>

	PR target/63971
	* gcc.target/aarch64/test_frame_1.c: Expect only two loads of
	x30 (in the epilogue).
	* gcc.target/aarch64/test_frame_6.c: Likewise.
	* gcc.target/aarch64/test_frame_2.c: Expect only one pair load of
	x30 and x19 (in the epilogue).
	* gcc.target/aarch64/test_frame_4.c: Likewise.
	* gcc.target/aarch64/test_frame_7.c: Likewise.

2014-11-22  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/63783
	PR target/51244
	* gcc.target/sh/torture/pr63783-1.c: New.
	* gcc.target/sh/torture/pr63783-2.c: New.
	* gcc.target/sh/pr51244-20.c: Adjust.
	* gcc.target/sh/pr51244-20-sh2a.c: Adjust.

2014-11-22  Tobias Burnus  <burnus@net-b.de>

	* gfortran.dg/coarray/cosubscript_1.f90: New.

2014-11-22  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/specs/pack11.ads: New test.

2014-11-22  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/specs/no_streams.ads: New test.

2014-11-22  Uros Bizjak  <ubizjak@gmail.com>

	* gcc.dg/store-motion-fgcse-sm.c (dg-final): Cleanup
	store_modtion rtl dump.
	* gcc.dg/var-expand1.c (dg-final): Cleanup loop2_unroll rtl dump.
	* gcc.dg/var-expand3.c (dg-final): Ditto.

2014-11-22  Uros Bizjak  <ubizjak@gmail.com>

	* gcc.target/i386/avx512vl-vpermb-2.c: Require avx512vbmi.
	* gcc.target/i386/avx512vl-vpermi2b-2.c: Ditto.
	* gcc.target/i386/avx512vl-vpermt2b-2.c: Ditto.
	* gcc.target/i386/avx512vl-vpmaddhuq-2.c: Require avx512ifma.
	* gcc.target/i386/avx512vl-vpmaddluq-2.c: Ditto.
	* gcc.target/i386/avx512vl-vpmultishiftqb-2.c: Ditto.
