@@ -2,6 +2,7 @@
 /* { dg-do run } */
 /* { dg-options "-O2 -Wno-psabi" } */
 /* { dg-additional-options "-mno-mmx" { target i?86-*-* x86_64-*-* } } */
+/* { dg-prune-output "non-standard ABI extension" } */
 
 #define C1 c
 #define C2 C1, C1
